# sdl-openmugen

./: .gitignore  CMakeLists-sdl1.txt  CMakeLists-sdl2.txt  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: cd.yml  ci.yml
release/lin/: launcher.sh
release/mac/: launcher.command
release/win/: laucher.ps1
src/: Input.cpp  MemManager.cpp  MemManager.h  SDLManager.cpp  SffManager.cpp  SffManager.h  StateManager.cpp  StateManager.h  StateParser.cpp  VideoSystem.cpp  VideoSystem.h  engine.cpp  game.cpp  global.cpp  global.h  player.cpp  structs.h  tokenizer.cpp
